# sicm_modernized

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT  DECISIONS.md  PROJECT_NOTES.md  README.md  REQUIREMENTS.md  pyproject.toml
.claude/: settings.json
tests/: test_pipeline_canary.py
tooling/: .review-decisions.md  sicm-ontology.json  sicm-ontology.json.sha256  sicm-ontology.yaml
tooling/scripts/: README.md  check-review-decisions.sh  install-pre-commit-hook.sh  precommit-review-gate.sh
tooling/src/audit_ontology/: __init__.py  cli.py  test_results.py
tooling/src/sicm_ontology/: __init__.py  build.py  dag.py  models.py  types.py
